Fixed: #3769: Show whole Horizontal Scrollbar

--- a/include/themes/modern/main.css
+++ b/include/themes/modern/main.css
@@ -843,7 +843,6 @@ ul#breadcrumbs {
 	width: 100%;
 	vertical-align: top;
 	padding-top: 56px;
-	display: table;
 }
 
 .cactiTreeNavigationArea {
